<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="60dp"
    android:paddingLeft="16dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.suarezpc.hola.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginTop="61dp"
        android:id="@+id/tv_resultado"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:textColor="@android:color/holo_red_light"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/Et_peso"
        android:layout_alignEnd="@+id/Et_peso"
        android:layout_marginTop="17dp"
        android:id="@+id/Et_altura"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="37dp"
        android:id="@+id/Et_peso"
        android:layout_below="@+id/MSG"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:inputType="textPersonName" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo1"
        android:id="@+id/imageView4"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toStartOf="@+id/MSG" />

    <TextView
        android:text="@string/indice_masa_corporal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/MSG"
        android:layout_alignStart="@+id/Et_peso"
        android:layout_marginStart="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_imc"
        android:textSize="30sp"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        android:fontFamily="casual"
        android:id="@+id/MSG"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/Et_peso" />

    <TextView
        android:text="@string/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/Et_altura"
        android:layout_alignBottom="@+id/Et_altura"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:text="@string/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/Et_peso"
        android:layout_alignBottom="@+id/Et_peso"
        android:layout_toStartOf="@+id/Et_peso" />

    <Button
        android:text="@string/calculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:fontFamily="casual"
        android:onClick="calcular"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView2"
        android:layout_alignEnd="@+id/Et_altura" />

    <Button
        android:text="@string/historial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:textSize="12sp"
        android:onClick="onClickSwitch"
        android:layout_alignBaseline="@+id/button2"
        android:layout_alignBottom="@+id/button2"
        android:layout_toStartOf="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="@string/acerca_de"
        android:onClick="acercade"
        android:textSize="10sp"
        android:textStyle="normal|bold"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button" />


</RelativeLayout>
