<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_acercade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.suarezpc.hola.acercade">

    <TextView
        android:text="@string/acercad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:textStyle="normal|bold"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_light"
        android:fontFamily="sans-serif" />

    <TextView
        android:text="@string/aplicacion_desarrollada_para_el_calculo_de_indice_de_masa_corporal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:id="@+id/textView9"
        android:textSize="18sp"
        android:layout_below="@+id/textView8"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/app_original_aut_ntico_verificado_por_android_by_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="18sp"
        android:layout_marginBottom="26dp"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textColor="@android:color/background_dark" />

    <Button
        android:text="@string/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:background="?attr/colorButtonNormal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="principal" />

    <TextView
        android:text="@string/autor_fernando_suarez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo2"
        android:id="@+id/imageView2"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignEnd="@+id/textView8"
        android:layout_marginTop="33dp"
        android:cropToPadding="false" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/logo2"
        android:id="@+id/imageView5"
        android:layout_alignTop="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2" />

</RelativeLayout>
